# mixxxlab

./: .envrc  .gitignore  .gitmodules  README.md  beat_detector.py  cue_detector.py  export_beat_this.py  go.mod  go.sum  songformer_analyzer.py
analyzer/: analyzer.go  analyzer_test.go  audio.go  convert.go  convert_test.go  ml_analyzer.go  ml_analyzer_test.go  ml_analyzer_tf.go  ml_analyzer_tf_test.go  model_analysis.go  model_analysis_test.go  stft.go  stft_test.go
analyzer/lib/: CMakeLists.txt  analyzer.cpp  analyzer.h
cmd/app/: main.go
models/beat_this/: mel.onnx  mel.onnx.data
pkg/analysis/: analysis.go  analyzer.go  analyzer_test.go  audio.go  audio_test.go  beatthis_analyzer.go  convert.go  convert_test.go  cue_analyzer.go  mixx_analyzer.go  ml_analyzer.go  ml_analyzer_test.go  model_analysis.go  model_analysis_test.go  qm_analyzer.go  qm_analyzer_test.go  rekordbox_go_analyzer.go  rekordbox_go_analyzer_stub.go  rekordbox_go_analyzer_test.go  songformer_analyzer.go  stft.go  stft_test.go
pkg/analysis/lib/: CMakeLists.txt  analyzer.cpp  analyzer.h
pkg/server/: layout_test.go  server.go
src/: index.html  style.css
src/js/: app.js  audio-engine.js  audio-player.js  beat-grid.js  realtime-visualizer.js  visualizer.js  waveform.js
